[gd_scene load_steps=7 format=3 uid="uid://cdorpxq8ftbxu"]

[ext_resource type="FontFile" uid="uid://dp62dqv3f07yd" path="res://Assets/Fonts/IndieFlower-Regular.ttf" id="1_8lh7t"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_hyk2u"]
[ext_resource type="Texture2D" uid="uid://dejbhf8g1fcwx" path="res://Assets/Scenes/Foreground/Star/frame0000.png" id="2_c3ehl"]
[ext_resource type="Texture2D" uid="uid://dmpssktx80cpm" path="res://Assets/UI/BugEmpty.png" id="3_xw5ei"]
[ext_resource type="Texture2D" uid="uid://c75yseqglcjch" path="res://Assets/UI/BugFull.png" id="4_4oxoh"]
[ext_resource type="Texture2D" uid="uid://bliq6upwg0h0l" path="res://Assets/Scenes/Foreground/Key.png" id="5_su7sj"]

[node name="UI" type="CanvasLayer"]
scale = Vector2(0.440994, 0.434839)
transform = Transform2D(0.440994, 0, 0, 0.434839, 0, 0)
script = ExtResource("1_hyk2u")

[node name="FoodBarLabel" type="RichTextLabel" parent="."]
visibility_layer = 524288
z_index = 8
offset_left = 49.8873
offset_top = 34.4955
offset_right = 524.887
offset_bottom = 168.496
scale = Vector2(1.54423, 1.54423)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_8lh7t")
theme_override_font_sizes/normal_font_size = 91
text = "HUNGER"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="FoodBar" type="Node2D" parent="."]
position = Vector2(-9.07043, 29.8961)
scale = Vector2(0.818591, 0.818591)

[node name="BugEmpty" type="Sprite2D" parent="FoodBar"]
visibility_layer = 524288
position = Vector2(152.798, 332.228)
rotation = 0.0349066
texture = ExtResource("3_xw5ei")

[node name="BugFull" type="Sprite2D" parent="FoodBar/BugEmpty"]
visibility_layer = 524288
position = Vector2(0.999634, -0.0351563)
texture = ExtResource("4_4oxoh")

[node name="BugEmpty2" type="Sprite2D" parent="FoodBar"]
visibility_layer = 524288
position = Vector2(360.798, 335.229)
rotation = 0.332267
texture = ExtResource("3_xw5ei")

[node name="BugFull" type="Sprite2D" parent="FoodBar/BugEmpty2"]
visibility_layer = 524288
position = Vector2(0.999634, -0.0351563)
texture = ExtResource("4_4oxoh")

[node name="BugEmpty3" type="Sprite2D" parent="FoodBar"]
visibility_layer = 524288
position = Vector2(577.798, 340.228)
rotation = 0.0349066
texture = ExtResource("3_xw5ei")

[node name="BugFull" type="Sprite2D" parent="FoodBar/BugEmpty3"]
visibility_layer = 524288
position = Vector2(0.999634, -0.0351563)
texture = ExtResource("4_4oxoh")

[node name="Stars" type="Node2D" parent="."]
position = Vector2(-1557.85, 13.7982)
rotation = -0.00651514
scale = Vector2(1.36217, 1.50298)

[node name="Star1" type="Sprite2D" parent="Stars"]
visibility_layer = 524288
position = Vector2(4243.13, 105.409)
rotation = 1.99311
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_c3ehl")

[node name="Star2" type="Sprite2D" parent="Stars"]
visibility_layer = 524288
position = Vector2(4141.13, 98.4096)
rotation = -0.912762
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_c3ehl")

[node name="Star3" type="Sprite2D" parent="Stars"]
visibility_layer = 524288
position = Vector2(4039.13, 92.4094)
rotation = 1.16408
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_c3ehl")

[node name="Star4" type="Sprite2D" parent="Stars"]
visibility_layer = 524288
position = Vector2(3939.13, 90.4094)
rotation = 0.0437409
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_c3ehl")

[node name="Key" type="Sprite2D" parent="."]
position = Vector2(4247.22, 2352.59)
scale = Vector2(0.818591, 0.818591)
texture = ExtResource("5_su7sj")
